php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #49470 FILTER_SANITIZE_EMAIL does not work
Submitted: 2009-09-04 23:26 UTC Modified: 2009-09-07 02:35 UTC
From: contact at ghetmedia dot com Assigned:
Status: Closed Package: Filter related
PHP Version: 5.2SVN-2009-09-04 (snap) OS: *
Private report: No CVE-ID: None
 [2009-09-04 23:26 UTC] contact at ghetmedia dot com
Description:
------------
Filter_var and it's flag FILTER_SANITIZE_EMAIL do absolutely nothing.

Reproduce code:
---------------
echo filter_var('test@t//est.com', FILTER_SANITIZE_EMAIL);

Expected result:
----------------
test@test.com

Actual result:
--------------
test@t//est.com

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2009-09-05 17:28 UTC] contact at ghetmedia dot com
This is not compliant with the domain name RFC.
 [2009-09-07 02:35 UTC] svn@php.net
Automatic comment from SVN on behalf of iliaa
Revision: http://svn.php.net/viewvc/?view=revision&revision=288117
Log: Fixed bug #49470 (FILTER_SANITIZE_EMAIL allows disallowed characters).
 [2009-09-07 02:35 UTC] iliaa@php.net
This bug has been fixed in SVN.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 [2009-10-09 17:50 UTC] svn@php.net
Automatic comment from SVN on behalf of pajoye
Revision: http://svn.php.net/viewvc/?view=revision&revision=289438
Log: - Merge: Fixed bug #49470 (FILTER_SANITIZE_EMAIL allows disallowed characters)
 [2009-11-23 14:54 UTC] svn@php.net
Automatic comment from SVN on behalf of rasmus
Revision: http://svn.php.net/viewvc/?view=revision&revision=291212
Log: When Ilia fixed bug #49470 and removed the '/' as a valid
email char, he forgot to make the corresponding change in
filter test 033.
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Mon Sep 28 13:00:02 2026 UTC