- Merge: Fixed bug #49470 (FILTER_SANITIZE_EMAIL allows disallowed characters)